2006-11-26  Yen-Ju Chen <yjchen at gmail>

	* make sure the window size is right (hopefully).

2006-11-23  Yen-Ju Chen <yjchen at gmail>
	
	* Use MPlayer instead of MPlayerInterface.
	* Use gorm for stream panel, main menu and player.
	* Change window size only when movie information is ready.

2006-11-19  Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile: Updated to include etoile.make. 

2006-11-18  Yen-Ju Chen <yjchen at gmail>

	* Add volume slider to volume control.
	* Add 'open stream' menu.

2006-11-09  Guenther Noack <guenther@unix-ag.uni-kl.de>
	
	* File opening via drag&drop on app icon

2006-11-04  Yen-Ju Chen <yjchen at gmail>

	* Adapt MultimediaKit.
	* Fix changing image.

2006-10-07  Yen-Ju Chen <yjchen at gmail>

	* Initial import.
