@@ -1,3 +1,12 @@
+2007-02-19  Quentin Mathe <qmathe@club-internet.fr>
+
+	* Player.m (toolbarAllowedItemIdentifiers:, toolbarDefaultItemIdentifiers:,
+	toolbar:itemForItemIdentifier:willBeInsertedIntoToolbar:): Updated UI
+	to feel more in phase with Etoile by implementing a toolbar. Toolbar
+	will probably be displayed at bottom later.
+	(-awakeFromNib): Added toolbar support, put the video at the right place in
+	the window and cleaned code.
+
 2006-11-26  Yen-Ju Chen <yjchen at gmail>
 
 	* make sure the window size is right (hopefully).
